--- a/gulp/templates/sprite.css
+++ b/gulp/templates/sprite.css
@@ -1,5 +1,5 @@
-/* Do not edit modules/_sprite directly as it is generated automaticly by Gulp
-Instead edit gulp/templates/sprite ffffffffffffffffffffffffffffff*/
+/* Do not edit modules/_sprite directly as it is generated automaticly by Gulp.
+Instead edit gulp/templates/sprite */
 
 {{#shapes}}
   {{#first}}
